# bim

./: .gitignore  BIM.py  Bimbalance.py  README.md  bim.csv  pyproject.toml  utils.py
.github/workflows/: ci.yaml
bim/: BIM.py  Bimbalance.py  __init__.py  cli.py  utils.py
tests/: test_bim.py
tests/data/: bim.csv  test.trees  testeta.json
